# misp-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CLOUD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  ONBOARDING.md  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
deploy/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform/ec2/: README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf
deploy/terraform/fargate/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
deploy/terraform/modules/net_lb/: main.tf  outputs.tf  variables.tf
misp_mcp/: __init__.py  client.py  config.py  context.py  http_app.py  server.py  validators.py
scripts/: bump_version.py  live_smoke_test.py  mcp_http_test.py  mcp_protocol_test.py
tests/: test_guardrails.py  test_server.py
