[project]
name = "misp-mcp"
dynamic = ["version"]
description = "MCP server for the MISP threat intelligence platform (read tools + a gated IOC-submission write tool)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Indranil Roy" }]
keywords = ["mcp", "misp", "threat-intelligence", "security", "claude"]
dependencies = [
    "mcp==1.28.1",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "uvicorn==0.51.0",
    "starlette==1.3.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/indranilroy99/misp-mcp"
Repository = "https://github.com/indranilroy99/misp-mcp"

[project.scripts]
misp-mcp = "misp_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "misp_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["misp_mcp"]
